Add the processor, integrate it with GenerateTripsFromTapsCommand, and ensure the integration test passes.